syntax = "proto3";

option go_package = ".;proto";

package proto;

message MarkovRequest {
    repeated string messages = 1;
    optional string seed = 2;
}

message MarkovResponse {
    string result = 1;
    optional string error = 2;
}