syntax = "proto3";

option go_package = ".;proto";

package proto;

message SubChannelReq {
    string channel = 1;
}
